Bring up more unit_tests for single process Mash.

BrowserWithTestWindowTest now creates a MusClient, which is important for its native widget factory.

AshTestViewsDelegate doesn't set the context on context/parentless widgets for Mash, since DesktopNativeWidgetAura doesn't require that and it interferes with getting the correct aura::Env. Using Shell's Env is problematic because the aura::Window for a WebContents wants to use aura::Env::GetInstance, which differs from the shell's Env.

WebContentsViewAura uses the Env of its context for the aura::Window it creates, if there is a context.

Also, spot fixes for:
1. LockScreenAppStateTest
2. ChromeLauncherControllerTest
3. ImmersiveModeControllerAshTest (some of these pass, a couple still
   fail, but none should crash)
4. TabStripTest
5. BookmarkBarViewTest

Bug: 906906,905430
Change-Id: I19ce303a0cad91262c1a393379ecd5c9d2bf75fb
Reviewed-on: https://chromium-review.googlesource.com/c/1351884
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612587}
Former-commit-id: 7591cbc49bf6e29303c6560d42ed53cb9423b9bb