content/browser/web_contents/web_contents_view_aura.cc
@@ -825,9 +825,10 @@ gfx::Rect WebContentsViewAura::GetViewBounds() const {
 void WebContentsViewAura::CreateAuraWindow(aura::Window* context) {
   DCHECK(aura::Env::HasInstance());
   DCHECK(!window_);
-  window_ = std::make_unique<aura::Window>(this);
+  window_ = std::make_unique<aura::Window>(
+      this, aura::client::WINDOW_TYPE_CONTROL,
+      context ? context->env() : aura::Env::GetInstance());
   window_->set_owned_by_parent(false);
-  window_->SetType(aura::client::WINDOW_TYPE_CONTROL);
   window_->SetName("WebContentsViewAura");
   window_->Init(ui::LAYER_NOT_DRAWN);
   aura::Window* root_window = context ? context->GetRootWindow() : nullptr;
