ash/test/ash_test_views_delegate.cc
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/test/ash_test_views_delegate.h"
 
 #include "ash/shell.h"
+#include "ui/base/ui_base_features.h"
 
 namespace ash {
 
@@ -17,9 +18,13 @@ void AshTestViewsDelegate::OnBeforeWidgetInit(
     views::Widget::InitParams* params,
     views::internal::NativeWidgetDelegate* delegate) {
   if (running_outside_ash_) {
-    DCHECK(ash::Shell::HasInstance());
-    if (!params->parent && !params->context)
-      params->context = Shell::GetRootWindowForNewWindows();
+    // With Mash, MusClient::CreateNativeWidget uses a DesktopNativeWidgetAura,
+    // which doesn't need a context.
+    if (!features::IsUsingWindowService()) {
+      DCHECK(ash::Shell::HasInstance());
+      if (!params->parent && !params->context)
+        params->context = Shell::GetRootWindowForNewWindows();
+    }
   } else {
     CHECK(params->native_widget || params->context || params->parent)
         << "Widgets must be created with a context or parent. In tests use "
