chrome/test/base/browser_with_test_window_test.cc
@@ -32,7 +32,12 @@
 #include "components/constrained_window/constrained_window_views.h"
 
 #if defined(OS_CHROMEOS)
+#include "ash/public/cpp/mus_property_mirror_ash.h"
 #include "ash/test/ash_test_views_delegate.h"
+#include "content/public/browser/context_factory.h"
+#include "ui/aura/mus/window_tree_client.h"
+#include "ui/aura/test/env_test_helper.h"
+#include "ui/views/mus/mus_client.h"
 #else
 #include "ui/views/test/test_views_delegate.h"
 #endif
@@ -106,6 +111,23 @@ void BrowserWithTestWindowTest::SetUp() {
   // then Browser will create the a production BrowserWindow and the subclass
   // is responsible for cleaning it up (usually by NativeWidget destruction).
   window_.reset(CreateBrowserWindow());
+
+#if defined(OS_CHROMEOS)
+  if (aura::Env::GetInstance()->mode() == aura::Env::Mode::MUS) {
+    views::MusClient::InitParams mus_client_init_params;
+    mus_client_init_params.connector =
+        ash_test_helper()->GetWindowServiceConnector();
+    mus_client_init_params.create_wm_state = false;
+    mus_client_init_params.running_in_ws_process = true;
+    mus_client_init_params.window_tree_client =
+        aura::test::EnvTestHelper().GetWindowTreeClient();
+    mus_client_ = std::make_unique<views::MusClient>(mus_client_init_params);
+    mus_client_->SetMusPropertyMirror(
+        std::make_unique<ash::MusPropertyMirrorAsh>());
+
+    aura::Env::GetInstance()->set_context_factory(content::GetContextFactory());
+  }
+#endif
 
   browser_.reset(
       CreateBrowser(profile(), browser_type_, hosted_app_, window_.get()));
